# cuda-exploration

./: .gitignore  AGENTS.md  BACKLOG.md  README.md  SETUP.md  SUMMARY.md
cublas-attn-mla/: .gitignore  ANALYSIS.md  Makefile  attn_mla.cu  softmax.cu
cublas-half-precision/: .gitignore  ANALYSIS.md  matmul.cu  results.csv
cublas-matmul/: ANALYSIS.md  matmul.cu  results.csv
cuda-3dgs-real/: .gitignore  ANALYSIS.md  build.sh  f32_diff.cpp  ppm_diff.cpp  rasterize.cu  results.csv  run.sh  sh_cpu_ref.cpp
cuda-attn-gdn/: .gitignore  ANALYSIS.md  attn_gdn.cu  attn_gdn.sass  bench.cu  run.sh
cuda-attn-gdn-async/: .gitignore  ANALYSIS.md  Makefile  attn_gdn_async.cu  bench.cu  run.sh
cuda-attn-gdn-tma/: .gitignore  ANALYSIS.md  Makefile  attn_gdn_tma.cu  bench.cu  run.sh
cuda-attn-mla/: ANALYSIS.md  attn_mla.cu  run.sh
cuda-vecadd-bench/: ANALYSIS.md  results.csv  vecadd.cu
cutile-3dgs-real/: .gitignore  ANALYSIS.md  rasterize.py  run.sh  smoke_quick.py
cutile-3dgs-real-binned/: .gitignore  ANALYSIS.md  bin_build.py  rasterize_binned.py  run.sh
cutile-attn-gdn/: .gitignore  ANALYSIS.md  gdn_decode_fused.sass  main.py  results.csv  run.sh
cutile-attn-gqa/: ANALYSIS_W2d_fragment.md  main.py  results_bm128.csv  results_bm256.csv  results_bm64.csv  sweep_block_m.py  sweep_block_m_results.csv
cutile-attn-kda/: .gitignore  (+7 more)
oxide-gemm-sol/: ANALYSIS.md  Cargo.toml  README.md  gemm_sol.ptx  oxide_gemm_sol.ll  oxide_gemm_sol.ptx
oxide-gemm-sol/bench/: README.md  cublas_correctness_test.py  cublas_sol_bench.py  cutlass_sol_bench.py
oxide-gemm-sol/src/: main.rs
(+170 files in other folders)
